Add status and order controller and service
