# backend/src/controllers/index.ts
@@ -2,9 +2,13 @@ import { Express } from "express";
 import productController from "./productsController";
 import subCategoryController from "./subCategoryController";
 import categoryController from "./categoryController";
+import statusController from "./statusController";
+import orderController from "./orderController";
 
 export default function configControllers(app: Express) {
     app.use("/product", productController);
     app.use("/subCategory", subCategoryController);
     app.use("/category", categoryController);
+    app.use("/status", statusController);
+    app.use("/order", orderController);
 }
